[project]
name = "hf-ai-agent-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.1.1",
    "llama-index>=0.14.4",
    "llama-index-embeddings-huggingface>=0.6.1",
    "llama-index-llms-huggingface>=0.6.1",
    "llama-index-llms-huggingface-api>=0.6.1",
    "llama-index-vector-stores-chroma>=0.5.3",
    "pymupdf>=1.26.5",
]

[dependency-groups]
dev = [
    "ipykernel>=7.0.1",
]
